# Geometric-Scene-Architect

./: .gitignore  Makefile  PIPELINE.md  README.md  guidelines.md  implementation.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: debug_synthetic.yaml  default.yaml
scripts/: convert_s3dis_to_ply.py  generate_synthetic_room.py
src/: __init__.py  __main__.py  bbox_estimator.py  dbscan_clusterer.py  evaluator.py  exporter.py  interactive_viewer.py  loader.py  models.py  preprocessor.py  ransac_extractor.py  region_growing.py  semantic_labeler.py  topdown_mapper.py  visualizer.py
tests/: __init__.py  conftest.py  test_bbox.py  test_dbscan.py  test_exporter.py  test_labeler.py  test_loader.py  test_models.py  test_pipeline.py  test_preprocessor.py  test_ransac.py  test_topdown.py
